--- a/views/timeline.ejs
+++ b/views/timeline.ejs
@@ -30,13 +30,13 @@
         <div class="row well">
 
             <div class="col-xs-1">
-                <img src="<%= post.image %>"/>
+                <img src="<%= post.image %>" style="width: 50px; height: 50px;"/>
             </div>
             <div class="col-lg-9">
                 <div class="row">
                     <p>
                         <strong><%= post.name %></strong> <%= post.username %><br>
-                        <%- post.text %>
+                        <%- post.text %> <br> Created at <%- post.date %>
                     </p>
                 </div>
                 <div class="row _icons">
@@ -52,30 +52,7 @@
     <% } %>
 
 
-    <% for(var post,i=0; post=facebookPosts[i]; i++) {%>
-         <div class="row well">
-
-            <div class="col-xs-1">
-                <img src="<%= post.image %>"/>
-            </div>
-            <div class="col-lg-9">
-                <div class="row">
-                    <p>
-                        <strong><%= post.name %></strong> <%= post.username %><br>
-                        <%- post.text %>
-                    </p>
-                </div>
-                <div class="row _icons">
-                    <i class="fa <%= post.liked ? "fa-thumbs-up" : "fa-thumbs-o-up" %> fa-2x _like" name="like<%= post.id %>"></i> 
-                    <a href="/reply/<%= post.id %>" class="fa fa-reply fa-2x"></a>
-                    <a href="/share/<%= post.id %>" class="fa fa-share-square-o fa-2x"></a>
-                </div>
-            </div>
-            <div class="col-xs-2">
-                <span class="btn <%= post.network.class %>"><span class="fa fa-<%= post.network.icon %>"></span> <%= post.network.name %></a>
-            </div>
-        </div>
-    <% } %>
+   
 
     
 
