--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -61,6 +61,7 @@
                     </p>
 
                     <a href="/unlink/twitter" class="btn btn-info">Unlink</a>
+                     <a href="/compose/twitter" class="btn btn-info">Post</a>
                 <% } else { %>
                     <a href="/connect/twitter" class="btn btn-info">Connect Twitter</a>
                 <% } %>
@@ -86,6 +87,7 @@
                     </p>
 
                     <a href="/unlink/facebook" class="btn btn-primary">Unlink</a>
+                    <a href="/compose/facebook" class="btn btn-primary">Post</a>
                 <% } else { %>
                     <a href="/connect/facebook" class="btn btn-primary">Connect Facebook</a>
                 <% } %>
@@ -108,6 +110,7 @@
                     </p>
 
                     <a href="/unlink/google" class="btn btn-danger">Unlink</a>
+                    <a href="/compose/google" class="btn btn-danger">Post</a>
                 <% } else { %>
                     <a href="/connect/google" class="btn btn-danger">Connect Google</a>
                 <% } %>
