--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -24,9 +24,10 @@
     <% } %>
 
     <div class="row">
-        <form method = "post" action="/compose">
+        <form method = "post" action="/compose/<%= type %>">
             <div class="form-group">
                 <textarea name="text" class="form-control" rows="3" placeholder="Compose your post here..."></textarea>
+                
             </div>
             <button type="submit" class="btn btn-default">Post</button>
         </form>
