--- a/views/timeline.ejs
+++ b/views/timeline.ejs
@@ -42,7 +42,7 @@
                 <div class="row _icons">
                     <i class="fa <%= post.liked ? "fa-thumbs-up" : "fa-thumbs-o-up" %> fa-2x _like" name="like<%= post.id %>" provider="<%= post.network.icon %>"></i> 
                     <a href="/reply/<%= post.network.icon %>/<%= post.id %>" class="fa fa-reply fa-2x"></a>
-                    <a href="/share/<%= post.id %>" class="fa fa-share-square-o fa-2x"></a>
+                    <a href="/share/<%= post.network.icon %>/<%= post.id %>" class="fa fa-share-square-o fa-2x"></a>
                 </div>
             </div>
             <div class="col-xs-2">
